made minor edits to details, corrected function name, added screenshot of PIDs in metacatUI metadata view

--- a/training/02_create_data_packages_in_r.Rmd
+++ b/training/02_create_data_packages_in_r.Rmd
@@ -1,26 +1,27 @@
 # Create data packages in R
 
-This chapter will teach you how to create and submit data package to a DataONE node in R.
+This chapter will teach you how to create and submit a data package to a DataONE node in R.
 
 ## What is in a package?
 
 A data package generally consists of at least 3 "objects" or files. 
 
-1. Metadata: One object is the metadata file itself. In case you are unfamiliar with metadata, metadata is information that describes data (e.g. who made the data, how was the data made, etc.). The metadata file will be in an XML format, and have the extension `.xml` (extensible markup language). We often refer to this file as the EML (Ecological Metadata Language), which is the metadata standard that it uses.
+1. Metadata: One object is the metadata file itself. In case you are unfamiliar with metadata, metadata are information that describe data (e.g. who made the data, how were the data made, etc.). The metadata file will be in an XML format, and have the extension `.xml` (extensible markup language). We often refer to this file as the EML (Ecological Metadata Language), which is the metadata standard that it uses.
 
-2. Data: Other objects in a package are the data files themselves. Most commonly these are data tables (`.csv`), but they can also be audio files, netCDF files, plain text files, pdf documents, image files, etc. 
+2. Data: Other objects in a package are the data files themselves. Most commonly these are data tables (`.csv`), but they can also be audio files, NetCDF files, plain text files, PDF documents, image files, etc. 
 
-3. Resource Map: The final object is the resource map. This object is a text file that defines the relationships between all of the other objects in the data package. It says things like "this metadata file describes this data file," and is critical to making a data package render correctly on the website with the metadata file and all of the data files together in the correct place. Fortunately, we rarely, if ever, have to actually look at the contents of resource maps; they are generated for us using tools in R.
+3. Resource Map: The final object is the resource map. This object is a plain text file with the extension `.rdf` ([Resource Description Framework](https://www.w3.org/RDF/)) that defines the relationships between all of the other objects in the data package. It says things like "this metadata file describes this data file," and is critical to making a data package render correctly on the website with the metadata file and all of the data files together in the correct place. Fortunately, we rarely, if ever, have to actually look at the contents of resource maps; they are generated for us using tools in R.
 
 ## About identifiers
 
-Each object (metadata files, data files, resource maps) on the ADC or KNB (another repo) has a unique identifier, also sometimes called a "PID" (persistent identifier). When you look at the landing page for a data set, for example [here](https://arcticdata.io/catalog/#view/resource_map_doi:10.18739/A2836Z), you can find the resource map identifier in the URL (`resource_map_doi:10.18739/A2836Z`), the metadata identifier in the "General > Identifier" section of the metadata record (`doi:10.18739/A2836Z`), and the data identifier by clicking the "more info" link next to the data object, and looking at the "Online Distribution Info" section (`arctic-data.9546.1`).
+Each object (metadata files, data files, resource maps) on the ADC or the KNB (another repo) has a unique identifier, also sometimes called a "PID" (persistent identifier). When you look at the landing page for a data set, for example [here](https://arcticdata.io/catalog/#view/doi:10.18739/A2836Z), you can find the resource map identifier listed under the title in the gray bar after the words "Files in this dataset Package:" (`resource_map_doi:10.18739/A2836Z`), the metadata identifier in the "General > Identifier" section of the metadata record or after the title with blue font (`doi:10.18739/A2836Z`), and the data identifier by clicking the "more info" link next to the data object, and looking at the "Online Distribution Info" section (`arctic-data.9546.1`).
+![]("images/PIDs.png")
 
 Different versions of a package are linked together by what we call the "version chain" or "obsolescence chain". Making an update to a data package, such as replacing a data file, changing a metadata record, etc, will result in a new identifier for the new version of the updated object. When making changes to a package, always use the `arcticdatautils::update_object` or `arcticdatautils::publish_update` commands on the *latest versions* of all objects to ensure that the version chain is maintained.
 
 ## Uploading packages using R
 
-We will be using R to connect to the [NSF Arctic Data Center (ADC)](https://arcticdata.io) data repository to push and pull edits. To identify yourself as an admin you will need to pass a 'token' into R. Do this by signing in to the ADC with your [ORCiD](https://orcid.org/register), hovering over your name and clicking on "My profile", then navigating to "Settings" and "Authentication Token", copying the "Token for DataONE R", and pasting and running it in your R console.
+We will be using R to connect to the [NSF Arctic Data Center (ADC)](https://arcticdata.io/catalog/#data) data repository to push and pull edits. To identify yourself as an admin you will need to pass a 'token' into R. Do this by signing in to the ADC with your [ORCiD](https://orcid.org/register), hovering over your name and clicking on "My profile", then navigating to "Settings" and "Authentication Token", copying the "Token for DataONE R", and pasting and running it in your R console.
 
 **This token is your identity on these sites, please treat it as you would a password** (ie. don't paste into scripts that will be shared). The easiest way to do this is to always run the token in the *console*. There's no need to keep it in your script since it's temporary anyway. Sometimes you'll see a placeholder in scripts to remind users to get their token, such as:
 
@@ -34,25 +35,26 @@ library(devtools)
 library(dataone)
 library(datapack)
 library(EML)
+library(remotes)
 library(XML)
 ```
 
-If any package could not be loaded, use the following command (replacing package_name with the actual package name) to install the package.
+If any package could not be loaded, use the following command (replacing package_name with the actual package name) to install the package, then load them.
 
 ```{r, eval = F}
-install.package("package_name")
+install.packages("package_name")
 ```
 
 Now install a couple of packages:
 ```{r, eval = F}
-devtools::install_github("nceas/arcticdatautils"); library(arcticdatautils)
-devtools::install_github("nceas/datamgmt"); library(datamgmt)
+remotes::install_github("nceas/arcticdatautils"); library(arcticdatautils)
+remotes::install_github("nceas/datamgmt"); library(datamgmt)
 ```
 
 ```{r, child = '../workflows/edit_data_packages/set_dataone_nodes.Rmd'}
 ```
 
-For now set the node to the test Arctic node.
+For now, set the node to the test Arctic node.
 
 ``` {r, eval = F, class.source = 'exercise'}
 cn <- dataone::CNode('STAGING')
@@ -67,18 +69,14 @@ mn <- dataone::getMNode(cn,'urn:node:mnTestARCTIC')
 
 ## Exercise 2 {.exercise}
 
-* Locate the data package you published in [Exercise 1](#exercise-1) by navigating to the "My Profile" section on [test.arcticdata.io](https://test.arcticdata.io).
+* Locate the data package you published in [Exercise 1](#exercise-1) by navigating to the "My Profile > My Data" section on [test.arcticdata.io](https://test.arcticdata.io).
 * Download the metadata and data files and transfer them to the Datateam server.
-* Using the functions described in the section above, publish your metadata record and data file to the site. (When you do so, make sure you save the `pids` to different variables in R...) i.e.
+* Using the functions described in the section above, publish your metadata record and data file to the site. (When you do so, make sure you save the `PIDs` to different variables in R...) i.e.
 
 ``` {r, eval = FALSE, class.source = 'exercise'}
 data_pid <- arcticdatautils::publish_object(...)
 metadata_pid <- arcticdatautils::publish_object(...)
 ```
 
-* Then create a `resource_map` containing your data and metadata.
-* View your new data set (which is identical to the one you created previously) by appending the `metadata` `pid` the end of the URL test.arcticdata.io/#view/... 
-
-
-
-
+* Then create a resource map containing your data and metadata.
+* View your new data set (which is identical to the one you created previously) by appending the metadata PID to the end of the URL test.arcticdata.io/#view/... 
