Made minor edits to language and code. Added more details.

--- a/training/03_update_a_data_package.Rmd
+++ b/training/03_update_a_data_package.Rmd
@@ -14,9 +14,9 @@ This chapter will teach you how to edit an existing data package in R.
 ## Exercise 3 {.exercise}
 
 * Locate the data package you published in the [previous exercise](#exercise-2) by navigating to the URL test.arcticdata.io/#view/...
-* Load the package and eml into R using the above commands.
-* Load the data file associated with the package into R as a `data.frame`. (Hint: use `read.csv()` to upload the data file from your computer/the server)
-* Make an edit to the data in R (e.g. change one of the colnames to `"TEST"`)
-* Save the edited data. (Hint: use `write.csv(data, row.names = FALSE)`)
+* Load the package and EML into R using the above commands.
+* Load the data file associated with the package into R as a `data.frame`. (Hint: use `read.csv()` to upload the data file from your computer/the server.)
+* Make an edit to the data in R (e.g. change one of the colnames to `"TEST"`).
+* Save the edited data. (Hint: use `write.csv(data, row.names = FALSE)`.)
 * Update the data file in the package with the edited data file using the above commands.
 * Update your package using the above commands.
