--- a/workflows/edit_data_packages/update_a_package.Rmd
+++ b/workflows/edit_data_packages/update_a_package.Rmd
@@ -1,6 +1,6 @@
 ## Update a package
 
-To update a package, use `arcticdatautils::publish_update`. This function has an argument for adding data PIDs (or otherwise including existing data PIDs to make sure that they stay with the package). This function allows you to add or remove data objects, and/or make metadata edits.
+To update a package, use `arcticdatautils::publish_update`. This function has an argument for adding data `PID`s (or otherwise including existing data `PID`s to make sure that they stay with the package). This function allows you to add or remove data objects, and/or make metadata edits.
 
 First make sure you have the package you want to update, [loaded into R](#get-package-and-eml).
 
@@ -19,7 +19,7 @@ Next verify the eml is valid.
 EML::eml_validate(eml_path)
 ```
 
-The above should return `TRUE` if the `eml` is valid. If it returns `FALSE`, fix the eml file, use `write_eml()` to save the fixed file, and retry.
+The above should return `TRUE` if the `EML` is valid. If it returns `FALSE`, fix the EML file, use `write_eml()` to save the fixed file, and retry.
 
 ### Updating data
 
@@ -40,6 +40,8 @@ update <- arcticdatautils::publish_update(mn,
                                           public = FALSE,
                                           check_first = TRUE)
 ```
+
+Refresh the landing page at test.arcticdata.io/#view/... for this package and then follow the "newer version" link to view the latest.
 
 If a package is ready to be public, you can change the `public` argument in the `publish_update` call to `TRUE`.
 
