--- a/workflows/edit_eml/edit_attributelists.Rmd
+++ b/workflows/edit_eml/edit_attributelists.Rmd
@@ -1,48 +1,49 @@
 ## Edit attributeLists
 
-Attributes are stored in an [attributeList](https://github.com/NCEAS/eml/blob/master/eml-attribute.png). When editing attributes in R, you need to create one-three objects:
+Attributes are stored in an [attributeList](https://github.com/NCEAS/eml/blob/master/eml-attribute.png). When editing attributes in R, you need to create one to three objects:
 
 1. A data.frame of attributes
 2. A data.frame of custom units (if applicable)
 3. A data.frame of factors (if applicable)
 
-Note, to edit/examine an existing attribute table already in a eml file you can use the following commands. 
+Note, to edit/examine an existing attribute table already in an EML file you can use the following commands: 
 
 ```{r, eval = FALSE}
 attributeList <- EML::get_attributes(eml@dataset@dataTable[[i]]@attributeList)
 attributes <- attributeList$attributes
+print(attributes)
 ```
 
 ### Edit Attributes
 
-Attribute information should be stored in a `data.frame` with the following columns.
+Attribute information should be stored in a `data.frame` with the following columns:
 
 * **attributeName**: The name of the attribute as listed in the csv. Required. e.g.: "c_temp"
 * **attributeLabel**: A descriptive label that can be used to display the name of an attribute. It is not constrained by system limitations on length or special characters. Optional. e.g.: "Temperature (Celsius)"
-* **attributeDefinition**: Longer description of the attribute, including the required context for interpreting the attributeName. Required. e.g.: "The near shore water temperature in the upper inter-tidal zone, measured in degrees Celsius."
+* **attributeDefinition**: Longer description of the attribute, including the required context for interpreting the `attributeName`. Required. e.g.: "The near shore water temperature in the upper inter-tidal zone, measured in degrees Celsius."
 * **measurementScale**: One of: nominal, ordinal, dateTime, ratio, interval. Required.
     + *nominal*: unordered categories or text. e.g.: (Male, Female) or (Yukon River, Kuskokwim River)
     + *ordinal*: ordered categories. e.g.: Low, Medium, High
     + *dateTime*: date or time values from the Gregorian calendar. e.g.: 01-01-2001
     + *ratio*: measurement scale with a meaningful zero point in nature. Ratios are proportional to the measured variable. e.g.: 0 Kelvin represents a complete absence of heat. 200 Kelvin is half as hot as 400 Kelvin. 1.2 meters per second is twice as fast as 0.6 meters per second.
-    + *interval*: values from a scale with equidistant points, where the zero point is arbitrary. This is usually reserved for degrees Celsius or Fahrenheit, or latitude and longitude coordinates, or any other human-constructed scale. e.g.: there is still heat at 0° Celsius; 12° Celsius is NOT half as hot as 24° Celsius
-* **domain**: One of: textDomain, enumeratedDomain, numericDomain, dateTimeDomain. Required.
+    + *interval*: values from a scale with equidistant points, where the zero point is arbitrary. This is usually reserved for degrees Celsius or Fahrenheit, or latitude and longitude coordinates, or any other human-constructed scale. e.g.: there is still heat at 0° Celsius; 12° Celsius is NOT half as hot as 24° Celsius.
+* **domain**: One of: `textDomain`, `enumeratedDomain`, `numericDomain`, `dateTime`. Required.
     + *textDomain*: text that is free-form, or matches a pattern
     + *enumeratedDomain*: text that belongs to a defined list of codes and definitions. e.g.: CASC = Cascade Lake, HEAR = Heart Lake
-    + *dateTimeDomain*: dateTime attributes
-    + *numericDomain*: attributes that are numbers (either ratio or interval)
-* **formatString**: Required for dateTimeDomain, NA otherwise. Format string for dates, e.g. "MM/DD/YYYY".
-* **definition**: Required for textDomain, NA otherwise. Definition for attributes that are a character string, matches attribute definition in most cases.
-* **unit**: Required for numericDomain, NA otherwise. Unit string. If the unit is not a standard unit, a warning will appear when you create the attribute list, saying that it has been forced into a custom unit. Use caution here to make sure the unit really needs to be a custom unit. A list of standard units can be found here: https://knb.ecoinformatics.org/#external//emlparser/docs/eml-2.1.1/./eml-unitTypeDefinitions.html#StandardUnitDictionary
-* **numberType**: Required for numericDomain, NA otherwise. Options are "real", "natural", "whole", "integer".
-    + *real*: positive and negative fractions and non fractions (...-1,-0.25,0,0.25,1...)
-    + *natural*: non-zero positive counting numbers (1,2,3...)
-    + *whole*: positive counting numbers and zero (0,1,2,3...)
-    + *integer*: positive and negative counting numbers and zero (...-2,-1,0,1,2...)
+    + *dateTimeDomain*: `dateTime` attributes
+    + *numericDomain*: attributes that are numbers (either `ratio` or `interval`)
+* **formatString**: Required for `dateTime`, NA otherwise. Format string for dates, e.g. "DD/MM/YYYY".
+* **definition**: Required for `textDomain`, NA otherwise. Definition for attributes that are a character string, matches attribute definition in most cases.
+* **unit**: Required for `numericDomain`, NA otherwise. Unit string. If the unit is not a standard unit, a warning will appear when you create the attribute list, saying that it has been forced into a custom unit. Use caution here to make sure the unit really needs to be a custom unit. A list of standard units can be found [here](https://knb.ecoinformatics.org/#external//emlparser/docs/eml-2.1.1/./eml-unitTypeDefinitions.html#StandardUnitDictionary).
+* **numberType**: Required for `numericDomain`, NA otherwise. Options are `real`, `natural`, `whole`, and `integer`.
+    + *real*: positive and negative fractions and integers (...-1,-0.25,0,0.25,1...)
+    + *natural*: non-zero positive integers (1,2,3...)
+    + *whole*: positive integers and zero (0,1,2,3...)
+    + *integer*: positive and negative integers and zero (...-2,-1,0,1,2...)
 * **missingValueCode**: Code for missing values (e.g.: '-999', 'NA', 'NaN'). NA otherwise. Note that an NA missing value code should be a string, 'NA', and numbers should also be strings, '-999.'
 * **missingValueCodeExplanation**: Explanation for missing values, NA if no missing value code exists.
 
-You can create attributes by hand by typing them out in R following a workflow similar to that as below.
+You can create attributes by hand by typing them out in R following a workflow similar to the one below.
 
 ```{r, eval = FALSE}
 attributes <- data.frame(
@@ -61,7 +62,7 @@ attributes <- data.frame(
     stringsAsFactors = FALSE)
 ```
 
-However, typing this out in R can be a major pain. Luckily, there is a shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you), or to edit an existing attribute table, or create attributes from scratch using the following commands (the commands will launch a shiny app in your web browser).
+However, typing this out in R can be a major pain. Luckily, there is a shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you), or to edit an existing attribute table, or create attributes from scratch using the following commands (these commands will launch a shiny app in your web browser):
 
 ```{r, eval = FALSE}
 # From data (recommended)
@@ -74,37 +75,37 @@ datamgmt::create_attributes_table(attributes_table = attributes_table)
 datamgmt::create_attributes_table()
 ```
 
-Once you are done editing a table in the app, click the `Print` button to print text of a code that will build a data frame in R. Copy that code and assign it to a variable in your script (e.g. `attributes <- data.frame(...)`).
+Once you are done editing a table in the app, click the `Print` button to print text of a code that will build a data.frame in R. Copy that code and assign it to a variable in your script (e.g. `attributes <- data.frame(...)`).
 
 For simple attribute corrections, `datamgmt::edit_attribute` allows you to edit the slots of a single attribute within an attribute list.
 
 ### Edit Custom Units
 
-EML has a set list of units that can be added to an eml file. These can be seen by using the following code.
+EML has a set list of units that can be added to an EML file. These can be seen by using the following code:
 
 ```{r, eval = FALSE}
 standardUnits <- get_unitList()
 View(standardUnits$units)
 ```
 
-If you have units that are not in the standard EML unit list, you will need to build a custom unit list. A unit typically consists of the following fields.
+If you have units that are not in the standard EML unit list, you will need to build a custom unit list. A unit typically consists of the following fields:
 
-* **id**: The unit id (ids are camelCased)
-* **unitType**: The unit type (run `View(standardUnits$unitTypes)` to see standard unitTypes)
-* **parentSI**: The parent SI unit (e.g. for kilometer parentSI = "meter")
-* **multiplierToSI**: Multiplier to the parent SI unit (e.g. for kilometer multiplierToSI = 1000)
-* **abbreviation**: Unit abbreviation (e.g. for kilometer abbreviation = "km")
-* **description**: Text defining the unit (e.g. for kilometer definition = "1000 meters")
+* **id**: The `unit id` (ids are camelCased)
+* **unitType**: The `unitType` (run `View(standardUnits$unitTypes)` to see standard `unitType`s)
+* **parentSI**: The `parentSI` unit (e.g. for kilometer `parentSI` = "meter")
+* **multiplierToSI**: Multiplier to the `parentSI` unit (e.g. for kilometer `multiplierToSI` = 1000)
+* **name**: Unit abbreviation (e.g. for kilometer `name` = "km")
+* **description**: Text defining the unit (e.g. for kilometer `description` = "1000 meters")
 
-Additionally, `datamgmt::create_attributes_table` will tell you if each of your units are standard or not. If your unit is not standard, you should use the following code to help auto-generate a custom unit.
+Additionally, `datamgmt::create_attributes_table` will tell you if each of your units are standard or not. If your unit is not standard, you should use the following code to help auto-generate a custom unit:
 
 ``` {r, eval = FALSE}
 datamgmt::return_eml_units("your_unit")
 ```
 
-Note, `datamgmt::create_attributes_table` calls `datamgmt::get_custom_units` for you! Custom units need to have the following columns.
+Note, `datamgmt::create_attributes_table` calls `datamgmt::get_custom_units` for you!
 
-`datamgmt::get_custom_units` will auto-generate many of these fields for you (**but don't just assume the autogeneration will be perfect, always ensure the autogeneration correctly handles your unit**)
+`datamgmt::get_custom_units` will auto-generate many of these fields for you (**but don't just assume the auto-generation will be perfect; always ensure the auto-generation correctly handles your unit**.)
 
 ### Edit Factors
 
@@ -116,15 +117,15 @@ For attributes that are `enumeratedDomains`, a table is needed with three column
 
 There is a tab in the `datamgmt::create_attributes_table` app that will help you build factors.
 
-If you need to build factors by hand, you can use named character vectors and then convert them to a data frame as shown in the example below.
-In this example, there are two enumerated domains in the attribute list - "Location" and "Region"
+If you need to build factors by hand, you can use named character vectors and then convert them to a data.frame as shown in the example below.
+In this example, there are two enumerated domains in the attribute list - "Location" and "Region".
 
 ```{r, eval = FALSE}
 Location <- c(CASC = 'Cascade Lake', CHIK = 'Chikumunik Lake', HEAR = 'Heart Lake', NISH = 'Nishlik Lake' )
 Region <- c(W_MTN = 'West region, locations West of Eagle Mountain', E_MTN = 'East region, locations East of Eagle Mountain')
 ```
 
-The definitions are then written into a data frame using the names of the named character vectors, and their definitions.
+The definitions are then written into a data.frame using the names of the named character vectors and their definitions.
 
 ```{r, eval = FALSE}
 factors <- rbind(data.frame(attributeName = 'Location', code = names(Location), definition = unname(Location)),
@@ -133,14 +134,14 @@ factors <- rbind(data.frame(attributeName = 'Location', code = names(Location), 
 
 ### Finalize attributeList
 
-Once you have built your attributes, factors, and custom units, you can add them to eml objects. Attributes and factors are combined to form an `attributeList` using the following command.
+Once you have built your attributes, factors, and custom units, you can add them to EML objects. Attributes and factors are combined to form an `attributeList` using the following command:
 
 ```{r, eval = FALSE}
 attributeList <- EML::set_attributes(attributes = attributes,
                                      factors = factors) 
 ```
 
-This `attributeList` must then be [added to a `dataTable`](#edit-datatables). Custom units are added to `additionalMetadata` using the following command.
+This `attributeList` must then be [added to a `dataTable`](#edit-datatables). Custom units are added to `additionalMetadata` using the following command:
 
 ```{r, eval = FALSE}
 unitlist <- set_unitList(custom_units)
