--- a/workflows/edit_data_packages/create_a_resource_map.Rmd
+++ b/workflows/edit_data_packages/create_a_resource_map.Rmd
@@ -5,7 +5,7 @@ If you are creating a new data package. You must create a `resource_map`. `Resou
 To create a new resource map with an existing [published](#publish-an-object) `metadata_pid` and `data_pids`, use the following command.
 
 ```{r create resource map, eval = FALSE}
-resource_map_pid <- arcticdatautils::create_resource_map(mn,
+resource_map_pid <- arcticdatautils::create_resource_map(mnT,
                                                          metadata_pid = metadata_pid,
                                                          data_pids = data_pids)
 ```
