--- a/workflows/edit_data_packages/get_package_and_eml.Rmd
+++ b/workflows/edit_data_packages/get_package_and_eml.Rmd
@@ -5,15 +5,15 @@ To update a package, you must load it into your R environment. After [setting yo
 ``` {r, eval = FALSE}
 rm_pid <- "your_resource_map_pid"
 
-pkg <- arcticdatautils::get_package(mn,
+pkg <- arcticdatautils::get_package(mnT,
                                     rm_pid,
                                     file_names = TRUE)
 ```
 
-After loading the package, you can also load the eml file into R using the following command.
+After loading the package, you can also load the EML file into R using the following command:
 
 ``` {r, eval = FALSE}
-eml <- EML::read_eml(rawToChar(dataone::getObject(mn, pkg$metadata)))
+eml <- EML::read_eml(rawToChar(dataone::getObject(mnT, pkg$metadata)))
 ```
 
 ```{block, type = 'note'}
@@ -22,7 +22,7 @@ eml <- EML::read_eml(rawToChar(dataone::getObject(mn, pkg$metadata)))
 When editing `resource_maps`, you always want to be working with the most recent update. To ensure you have the most recent `resource_map`, you can use the following commands.
 
 <pre class="sourceCode r"><code class="sourceCode r">rm_pid_original &lt;-<span class="st"> &quot;your_original_resource_map_pid&quot;</span>
-all_rm_versions &lt;-<span class="st"> </span>arcticdatautils<span class="op">::</span><span class="kw">get_all_versions</span>(mn, rm_pid_original)
+all_rm_versions &lt;-<span class="st"> </span>arcticdatautils<span class="op">::</span><span class="kw">get_all_versions</span>(mnT, rm_pid_original)
 rm_pid &lt;-<span class="st"> </span>all_rm_versions[<span class="kw">length</span>(all_rm_versions)]
 print(rm_pid)</code></pre>
 
@@ -31,7 +31,7 @@ print(rm_pid)</code></pre>
 ``` {r, eval = FALSE, echo = FALSE}
 # Code Used to generate HTML in note above
 rm_pid_original <- "your_original_resource_map_pid"
-all_rm_versions <- arcticdatautils::get_all_versions(mn, rm_pid_original)
+all_rm_versions <- arcticdatautils::get_all_versions(mnT, rm_pid_original)
 rm_pid <- all_rm_versions[length(all_rm_versions)]
 print(rm_pid)
 ```
