--- a/workflows/edit_eml/set_physical.Rmd
+++ b/workflows/edit_eml/set_physical.Rmd
@@ -1,20 +1,20 @@
 ## Set physical
 
-To set the `physical` aspects of a `dataTable`, use the following commands to build a `physical` object from a data `pid` that exists in your package.
+To set the `physical` aspects of a `dataTable`, use the following commands to build a `physical` object from a data `PID` that exists in your package. **Remember to [set the member node](https://nceas.github.io/datateam-training/training/create-data-packages-in-r.html#set-dataone-nodes) to test.arcticdata.io !**
 
 ```{r, eval = FALSE}
-physical <- arcticdatautils::pid_to_eml_physical(mn, pkg$data[[i]])
+physical <- arcticdatautils::pid_to_eml_physical(mnT, pkg$data[[i]])
 ```
 
-Alternatively, you can get the physical of a data object not in your package by simply inputting the data pid.
+Alternatively, you can set the `physical` of a data object not yet in your package by simply inputting the data `PID`:
 
 ```{r, eval = FALSE}
-physical <- arcticdatautils::pid_to_eml_physical(mn, "your_data_pid")
+physical <- arcticdatautils::pid_to_eml_physical(mnT, "your_data_pid")
 ```
 
 Note, the `physical` must then be [added to a `dataTable`](#edit-datatables).
 
-A final, but not recommended option, is to set the physical by hand. To do so one can use a workflow similar to the one below. However, the far superior workflow is to [publish](#publish-an-object) or [update](#update-an-object) your data first and then use ```pid_to_eml_physical`` to set the `physical`
+A final, but not recommended option, is to set the `physical` by hand. To do so, one can use a workflow similar to the one below. However, the far superior workflow is to [publish](#publish-an-object) or [update](#update-an-object) your data first and then use `pid_to_eml_physical` to set the `physical`.
 
 ```{r, eval = FALSE}
 id <- 'your_data_pid' #this should be an actual PID
