--- a/workflows/edit_data_packages/set_rights_and_access.Rmd
+++ b/workflows/edit_data_packages/set_rights_and_access.Rmd
@@ -1,25 +1,25 @@
 ## Set rights and access
 
-One final step when creating/updating packages is to make sure that the rights and access on all the objects that were uploaded are set correctly within the sysmeta. The function `arcticdatautils::set_rights_and_access` will set both, and `arcticdatautils::set_access` will just set access. There are two functions for this because a rights holder should always have access, but not all people who need access are rights holders. The rights holder of the data package is typically the submitter (if the dataset is submitted through the web form, sometimes referred to as the "registry"), but if a data team member is publishing objects for a PI, the rights holder should be the main point of contact for the dataset (i.e. the person who requested that we upload the data for them). 
+One final step when creating/updating packages is to make sure that the rights and access on all the objects that were uploaded are set correctly within the sysmeta. The function `arcticdatautils::set_rights_and_access` will set both, and `arcticdatautils::set_access` will just set access. There are two functions for this because a `rightsHolder` should always have access, but not all people who need access are `rightsHolder`s. The `rightsHolder` of the data package is typically the `submitter` (if the data set is submitted through the web form ("editor")), but if a data team member is publishing objects for a PI, the `rightsHolder` should be the main point of contact for the data set (i.e. the person who requested that we upload the data for them). 
 
-To set the rights and access for all of the objects in a [package](#get-package-and-eml), first get the ORCID of the person you want to give access and rights to.
-You can set this manually, or grab it from one of the creators in an eml file. You can look up ORCID [here](https://orcid.org/orcid-search/search). 
+To set the rights and access for all of the objects in a [package](#get-package-and-eml), first get the ORCiD of the person to whom you are giving rights and access.
+You can set this manually, or grab it from one of the creators in an EML file. You can look up ORCID iDs [here](https://orcid.org/orcid-search/search). 
 
 ```{r, eval = FALSE}
 # Manually set ORCiD
  subject <- 'http://orcid.org/PUT0-YOUR-ORCD-HERE'
 
-# Set ORCiD from eml creator
+# Set ORCiD from EML creator
  subject <- eml@dataset@creator[[1]]@userId[[1]]@.Data
  subject <- sub("^https://", "http://", subject)
 ```
 
-Note, when setting metadata, the ORCID must start with `http://`. ORCIDs in eml should start with `https://`. The `sub` command above will change this formatting for you.
+Note, when setting metadata, the ORCiD must start with `http://`. ORCiDs in EML should start with `https://`. The `sub` command above will change this formatting for you.
 
-Next, set the rights and access using the following command.
+Next, set the rights and access using the following command:
 
 ```{r, eval = F}
-set_rights_and_access(mn, 
+set_rights_and_access(mnT, 
                       pids = c(pkg$metadata, pkg$data, pkg$resource_map),
                       subject = subject,
                       permissions = c('read','write','changePermission'))
@@ -28,5 +28,5 @@ set_rights_and_access(mn,
 If you ever need to remove/add public access to your package or object, you can use `remove_public_read` or `set_public_read`, respectively. 
 
 ```{r eval = FALSE}
-arcticdatautils::remove_public_read(mn, c(pkg$metadata, pkg$data, pkg$resource_map))
+arcticdatautils::remove_public_read(mnT, c(pkg$metadata, pkg$data, pkg$resource_map))
 ```
