Edited for complete sentences and modified first image to dispaly #10.

--- a/workflows/pi_correspondence/navigate_rt.Rmd
+++ b/workflows/pi_correspondence/navigate_rt.Rmd
@@ -19,10 +19,10 @@ This is what you see first
 3. Tools - not needed  
 4. New Ticket - create a new ticket  
 5. Search - Type in the ticket number to quickly navigate to a ticket  
-6. Queue - Lists all of the tickets currently in arcticdata and their status  
+6. Queue - Lists all of the tickets currently in a particular queue (such as 'arcticdata') and their statuses  
  + New = unopened tickets that require attention  
- + Open = tickets currently open, under investigation by team member  
- + Stalled = tickets awaiting response from PI/Submitter  
+ + Open = tickets currently open and under investigation and/or being processed by a support team member  
+ + Stalled = tickets awaiting responses from the PI/ `submitter`  
 7. Tickets I Own - These are the current open tickets that are claimed by me  
 8. Unowned Tickets - Newest tickets awaiting claim  
 9. Ticket Status - Status and how long ago it was created  
@@ -44,13 +44,13 @@ This is the queue interface from number 6 of the Front page
 1. Title - Include the PI's name for reference  
 2. Display - homepage of the ticket  
 3. History - Comment/Email history, see bottom of Display page  
-4. Basics - edit the title, status and ownership here  
-5. People - option to add more people to the watch list for a given ticket conversation. Note that user/ PI/ submitter email addresses should be listed as "Requestors". Requestors are only emailed on "Replys", not "Comments". Ensure your ticket has a Requestor before attempting to contact users/ PIs/ submitters.   
-6. Links - option to "Merge into" another ticket number if this is part of a larger conversation. Also option to add a reference to other ticket number  
+4. Basics - edit the title, status, and ownership here  
+5. People - option to add more people to the watch list for a given ticket conversation. Note that user/ PI/ `submitter` email addresses should be listed as "Requestors". Requestors are only emailed on "Replys", not "Comments". Ensure your ticket has a Requestor before attempting to contact users/ PIs/ `submitter`s   
+6. Links - option to "Merge into" another ticket number if this is part of a larger conversation. Also option to add a reference to another ticket number  
 7. Actions  
- + Reply - message the submitter/ PI/ all watchers  
- + Comment - attach internal message (no submitters, only Data Teamers)  
+ + Reply - message the `submitter`/ PI/ all watchers  
+ + Comment - attach internal message (no `submitter`s, only Data Teamers)  
  + Open It - Open the ticket  
- + Stall - submitter has not responded in greater than 1 month  
+ + Stall - `submitter` has not responded in greater than 1 month  
  + Resolve - ticket completed  
-8. History - message history and option to reply (to submitter and beyond) or comment (internal message)
+8. History - message history and option to reply (to `submitter` and beyond) or comment (internal message)
