--- a/training/10_nesting_packages.Rmd
+++ b/training/10_nesting_packages.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(eval = F)
 
 Data packages on member nodes can exist as independent packages or in groups (nested data packages). Much like we can group multiple data files together with a common metadata file, we can group related data packages together with a common "parent" data package.
 
-The structure of nested data packages resembles a pyramid. There is one top level, or "parent", with one or more data packages, or "children", nested beneath it. There is no limit to how many nested levels can be created, but packages do not generally exceed 3 levels. [This "grandparent"](https://arcticdata.io/catalog/#view/urn:uuid:b0eef8b3-5f8a-4799-b823-eebcbee047e3) has has 5+ children (nested datasets), some of which have children packages of their own.   
+The structure of nested data packages resembles a pyramid. There is one top level, or "parent", with one or more data packages, or "childs", nested beneath it. There is no limit to how many nested levels can be created, but packages do not generally exceed 3 levels. [This "grandparent"](https://arcticdata.io/catalog/#view/urn:uuid:b0eef8b3-5f8a-4799-b823-eebcbee047e3) has has 5+ childs (nested datasets), all of which have child packages of their own.   
 
 Here are some common uses for nesting:  
 
@@ -18,46 +18,46 @@ Here are some common uses for nesting:
 * data files exceed the 1000 file limit per data package
 
 ## Create a new parent package 
-In some cases, a parent package already exists. Search the ADC for the NSF award number to see if there are already exisiting packages. Parents usually have a `UUID` rather than a `DOI` and often start with a title like "Collaborative research:", but not always. More typically, you will need to create a new parent by editing the existing metadata. The parent package should contain a generalized summary for the metadata of each of its children. 
+In some cases, a parent package already exists. Search the ADC for the NSF award number to see if there are already exisiting packages. Parents usually have a `UUID` rather than a `DOI` and often start with a title like "Collaborative research:", but not always. More typically, you will need to create a new parent by editing the existing metadata. The parent package should contain a generalized summary for the metadata of each of its childs. 
 
 To create a new parent, you will need to:
 
-1. **Create parent metadata.** It's often easiest to start with a child's metadata and generalize it
+1. **Create parent metadata.** It's often easiest to start with a child's metadata and generalize them.
 
-    - *Abstract/title:* Remove dates and other details that are specific to the child package. Sometimes the NSF award abstract/title will work
-    - *Data tables/other entities:* generally top-level parents do not include data objects, so these sections can be removed
-    - *Geographic coverage:* Expand to include geographic coverage of all children, if needed
-    - *Temporal coverage:* Expand to include temporal ranges of all children, if needed. If the study is ongoing, include the most recent end date; the parent can be updated when additional children are added
-    - *Methods:* Often not needed, but may be included if all children use the same methods
+    - *Abstract/title:* Remove dates and other details that are specific to the child package. Sometimes the [NSF award](https://www.nsf.gov/awardsearch/) abstract/ title will work.
+    - *Data tables/other entities:* Generally, top-level parents do not include data objects, so these sections can be removed.
+    - *Geographic coverage:* Expand to include geographic coverage of all childs, if needed.
+    - *Temporal coverage:* Expand to include temporal ranges of all childs, if needed. If the study is ongoing, include the most recent end date; the parent can be updated when additional childs are added.
+    - *Methods:* Often not needed, but may be included if all childs use the same methods.
 
 
 2. **Publish the parent metadata to the member node** (ADC) using `publish_object`.
-3. **Create a resource map** to link the parent and children together using `create_resource_map` and the `child_pids` argument.
+3. **Create a resource map** to link the parent and childs together using `create_resource_map` and the `child_pids` argument.
 
 ```{block, type = "warning"}
-Make sure you use the children's *resource map* PIDs when you create the resource map! If you forget to, consult Jesse or Jeanette for help on how to fix it.
+Make sure you use the childs' *resource map* `PID`s when you create the resource map! If you forgot to do so, consult Dom, Jesse, or Jeanette for help fixing it.
 ```
 
-## Add children to an existing parent
+## Add childs to an existing parent
 
 Nest the new child using the `child_pids` argument in `publish_update()`. 
 
 ```{r eval = FALSE}
 rm_child_new <- "some_child_rm_pid"
-pkg_parent <- get_package(mnTest, rm_parent)
+pkg_parent <- get_package(mnT, rm_parent)
 
-rm_parent2 <- publish_update(mnTest,
+rm_parent2 <- publish_update(mnT,
                              resource_map_pid = rm_parent,
                              metadata_pid = pkg_parent$metadata,
                              child_pids = c(pkg_parent$child_packages, 
                                             rm_child_new))
-# include the resource map PIDs of ALL the children* in the `child_pids` argument, otherwise the nesting relationships between any omitted children and the parent will be deleted
+# include the resource map PIDs of ALL the childs* in the `child_pids` argument, otherwise the nesting relationships between any omitted childs and the parent will be deleted
 ```
 
 ```{block, type = "warning"}
 Check through all arguments carefully before you publish to production! Do you need to update the metadata? Does the parent include data objects? Does the parent have a parent? 
 
-Parents can be tricky to fix and work with (especially if they have serial identifiers/SIDs), so if you're not sure how something works, try it on a test node.
+Parents can be tricky to fix and work with (especially if they have serial identifiers (SIDs)), so if you're not sure how something works, try it on a test node.
 ```
  
 ## Example
@@ -71,8 +71,8 @@ library(dataone)
 library(arcticdatautils)
 library(EML)
 
-cnTest <- CNode('STAGING')
-mnTest <- getMNode(cnTest,'urn:node:mnTestARCTIC')
+cnT <- CNode('STAGING')
+mnT <- getMNode(cnT,'urn:node:mnTestARCTIC')
 ```
 
 We can publish several data files at once using the `dir` and `sapply` functions. `dir` returns the paths to every file located in a folder.  
@@ -88,17 +88,17 @@ paths <- dir("/home/dmullen/Nesting_Training/2013", full.names = TRUE)
 meta_path <- "/home/dmullen/Nesting_Training/E1_2013metadata.xml"
 
 data_pids <- sapply(paths, function(path) { 
-  publish_object(mnTest, path, format = "text/csv") 
+  publish_object(mnT, path, format = "text/csv") 
   })
-metadata_pid <- publish_object(mnTest,
+metadata_pid <- publish_object(mnT,
                                path = meta_path,
                                format = format_eml())
 ```
 
-Create a resource map to associate the data with the metadata. Here we specify the metadata and data identifiers (PIDs) that we would like the resource map to associate together.  
+Create a resource map to associate the data with the metadata. Here we specify the metadata and data identifiers (`PID`s) that we would like the resource map to associate together.  
   
 ```{r}
-rm_2013 <- create_resource_map(mnTest,
+rm_2013 <- create_resource_map(mnT,
                                metadata_pid = metadata_pid,
                                data_pids = data_pids)
 ```
@@ -111,21 +111,21 @@ paths <- dir("/home/dmullen/Nesting_Training/2014", full.names = TRUE)
 meta_path <- "/home/dmullen/Nesting_Training/E1_2014metadata.xml"
 
 data_pids <- sapply(paths, function(path) { 
-  publish_object(mnTest, path, format = "text/csv") 
+  publish_object(mnT, path, format = "text/csv") 
   })
-metadata_pid <- publish_object(mnTest,
+metadata_pid <- publish_object(mnT,
                                path = meta_path,
                                format = format_eml())
 
 # Store new resource map as rm_2014
-rm_2014 <- create_resource_map(mnTest,
+rm_2014 <- create_resource_map(mnT,
                                metadata_pid = metadata_pid,
                                data_pids = data_pids)
 ```
 
 These two packages correspond to data from the same study, varying only by year; however, they currently exist on the test node as independent entities. We will associate them with each other by nesting them underneath a parent. 
 
-Now, let's create a parent metadata file. Read in one of the children's metadata files (EML). 
+Now, let's create a parent metadata file. Read in one of the childs' metadata files (EML). 
   
 ```{r, eval = T}
 eml_parent <- read_eml("data/E1_2013metadata.xml")
@@ -136,7 +136,7 @@ eml_parent <- read_eml("data/E1_2013metadata.xml")
 eml_parent@dataset@title
 ```
 
-The title of this child contains "2012-2013". This is too specific for the parent, as the temporal range of both children is 2012-2014. The parent should encompass this larger time range. 
+The title of this child contains "2012-2013". This is too specific for the parent, as the temporal range of both childs is 2012-2014. The parent should encompass this larger time range. 
   
 ```{r}
 new_title <- "Time series of water temperature, specific conductance, and oxygen from Lake E1, North Slope, Alaska, 2012-2014"
@@ -151,13 +151,13 @@ new_end_date <- new("calendarDate", "2014-09-20")
 eml_parent@dataset@coverage@temporalCoverage@.Data[[1]]@rangeOfDates@endDate@calendarDate <- new_end_date
 ```
   
-Remove `dataTable`s and `otherEntity`s from the metadata. If you recall from previous chapters, `dataTable`s contain metadata associated with data files (generally CSVs) and `otherEntity`s contain metadata about any other files in the data package (for instance a README or coding script). Because the parent does not contain any data objects, we want to remove `dataTables` and `otherEntities` from the metdata file. In this instance, the E1 2013 metadata only contains `dataTable`s. We can remove these by setting the `dataTable` element in the EML to a new blank object.  
+Remove `dataTable`s and `otherEntity`s from the metadata. If you recall from previous chapters, `dataTable`s contain metadata associated with data files (generally CSVs) and `otherEntity`s contain metadata about any other files in the data package (for instance a README or coding script). Because the parent does not contain any data objects, we want to remove `dataTable`s and `otherEntity`s from the metdata file. In this instance, the E1 2013 metadata only contain `dataTable`s. We can remove these by setting the `dataTable` element in the EML to a new blank object.  
   
 ```{r}
 eml_parent@dataset@dataTable <- new("ListOfdataTable")
 ```
 
-In this case, the abstract, contacts, creators, geographic description, and methods are already generalized and do not require changes. 
+In this case, the `abstract`, `contact`s, `creator`s, `geographicDescription`, and `methods` are already generalized and do not require changes. 
   
 Before writing your parent EML make sure that it validates. This is just a check to make sure everything is in the correct format.  
   
@@ -165,7 +165,7 @@ Before writing your parent EML make sure that it validates. This is just a check
 eml_validate(eml_parent)
 ```
   
-After your EML validates we need to save, or "write", it as a new file. Write your parent EML to a directory in your home folder. You can view this process like using "Save as" in Microsoft Word. We opened a file (E1_2013.xml), made some changes, and "saved it as" a new file called eml_parent.xml.  
+After your EML validates we need to save, or "write", it as a new file. Write your parent EML to a directory in your home folder. You can view this process like using "Save as" in Microsoft Word. We opened a file ("E1_2013.xml"), made some changes, and "saved it as" a new file called "eml_parent.xml".  
   
 ```{r}
 ## This will create the file "eml_parent.xml" at the location specified by path
@@ -176,15 +176,15 @@ write_eml(eml_parent, path)
 Next, we will publish the parent metadata to the test node.  
   
 ```{r}
-metadata_parent <- publish_object(mnTest, 
+metadata_parent <- publish_object(mnT, 
                                   path = path, 
                                   format_id = format_eml())
 ```
 
-Finally, we create a resource map for the parent package. We nest the two child data packages using the `child_pids` argument in `create_resource_map`.  Note that these `child_pids` are pids for the resource maps of the child packages, NOT the metadata pids.
+Finally, we create a resource map for the parent package. We nest the two child data packages using the `child_pids` argument in `create_resource_map`.  Note that these `child_pids` are `PID`s for the resource maps of the child packages, NOT the metadata `PID`s.
   
 ```{r}
-resourceMap_parent <- create_resource_map(mnTest, 
+resourceMap_parent <- create_resource_map(mnT, 
                                           metadata_pid = metadata_parent,
                                           child_pids = c(rm_2013, rm_2014))
 ```
